# async-zip

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/ch/perron2/async_zip/: AsyncZipPlugin.java
example/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/async_zip_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/assets/: person.json
example/ios/: .gitignore
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: async_zip.podspec
ios/Classes/: AsyncZipPlugin.h  AsyncZipPlugin.m  miniz.h  zip.c  zip.h  zip_addon.c
lib/: async_zip.dart
lib/src/: common.dart  isolate.dart  reader.dart  writer.dart  zip.dart
